# sql-rewriter

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
scripts/: generate_parser.sh
src/sql_rewriter/: __init__.py  parser.py
src/sql_rewriter/_generated/: __init__.py
tests/: example.py  test_parser.py
